# Exodus

./: .gitignore  CMakeLists.txt
res/shaders/: shader.frag
src/: main.cpp
